# parallelBFS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: web-Stanford.out_parallel_16_thread.out  web-Stanford.out_parallel_1_thread.out  web-Stanford.out_parallel_24_thread.out  web-Stanford.out_parallel_2_thread.out  web-Stanford.out_parallel_32_thread.out  web-Stanford.out_parallel_48_thread.out  web-Stanford.out_parallel_4_thread.out  web-Stanford.out_parallel_8_thread.out
include/: bfs.h  bitmap.h  graph.h  queue.h
output/: com-orkut.ungraph.data  rmat.data  roadNet-CA.data  soc-LiveJournal1.data  web-Stanford.data
src/: bfs.cpp  bitmap.cpp  graph.cpp  queue.cpp
